<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="action_settings" translatable="false">Settings</string>
    <string name="alert_network_cfg_dns" translatable="false">DNS地址不合格</string>
    <string name="alert_network_cfg_dns2" translatable="false">备用DNS地址不合格</string>
    <string name="alert_network_cfg_dns_null" translatable="false">请输入DNS地址</string>
    <string name="alert_network_cfg_gateway" translatable="false">网关地址不合格</string>
    <string translatable="false" name="alert_network_cfg_gateway_null">请输入网关地址</string>
    <string name="eth_account_error">Can\'t Be Empty</string>
    <string name="eth_ip_settings_invalid_network_prefix_length" msgid="40470058023181052">请输入有效掩码长度：0-32</string>
    <string name="eth_ip_settings_invalid_network_prefix_length_v6" msgid="40470058023181052">请输入有效掩码长度：0-64</string>
    <string translatable="false" name="alert_network_cfg_ip">IP地址不合格</string>
    <string translatable="false" name="alert_network_cfg_ip_getway">IP地址、网关地址不匹配</string>
    <string translatable="false" name="alert_network_cfg_ip_mask">IP地址、子网掩码不匹配</string>
    <string translatable="false" name="alert_network_cfg_ip_null">请输入IP地址</string>
    <string translatable="false" name="alert_network_cfg_mask">子网掩码地址不合格</string>
    <string translatable="false" name="alert_network_cfg_mask_length">子网掩码错误，请输入0-128</string>
    <string translatable="false" name="alert_network_cfg_mask_null">请输入子网掩码</string>
    <string translatable="false" name="alert_network_cfg_please_dns">请输入正确的DNS地址</string>
    <string translatable="false" name="alert_network_cfg_please_dns2">请输入正确的备用DNS</string>
    <string translatable="false" name="alert_network_cfg_please_gateway">请输入正确的网关地址</string>
    <string translatable="false" name="alert_network_cfg_please_ip">请输入正确的IP地址</string>
    <string translatable="false" name="alert_network_cfg_please_mask">请输入正确的子网掩码</string>
    <string translatable="false" name="alert_network_cfg_please_mask_v6">请输入前缀长度</string>
    <string translatable="false" name="alert_network_cfg_please_not_same_ip_gateway">请输入正确的IP地址和网关地址</string>
    <string translatable="false" name="alert_network_cfg_please_three">请输入正确的IP地址、子网掩码和网关地址</string>
    <string translatable="false" name="alert_network_cfg_please_three_v6">请输入正确的IP地址、前缀长度和网关地址</string>
    <string translatable="false" name="and">与</string>
    <string translatable="false" name="app_name">设置应用</string>
    <string translatable="false" name="auto_system_disable_wifi">设置是否启用WiFi功能</string>
    <string translatable="false" name="auto_system_disable_wifi_desc">当关闭WiFi功能时，系统设置页面不再提供WiFi连接</string>
    <string translatable="false" name="auto_system_disable_wifi_desc2">设置入口，无法通过WiFi连接网络。</string>
    <string translatable="false" name="auto_system_sleep_desc">系统将在设定的时间段提示待机。若一段时间内，用户在</string>
    <string translatable="false" name="auto_system_sleep_desc2">提示页面无任何操作，系统将自动待机。</string>
    <string translatable="false" name="auto_system_sleep_msg">系统自动待机提醒时间：</string>
    <string translatable="false" name="auto_system_sleep_title">设置自动待机提醒时间</string>
    <string translatable="false" name="auto_system_wifi_hardware_msg">硬件不支持WiFi功能</string>
    <string translatable="false" name="auto_system_wifi_msg">WiFi功能</string>
    <string translatable="false" name="available_disk_memory">已用</string>
    <string translatable="false" name="bluetooth">蓝牙</string>
    <string translatable="false" name="bluetooth_checking">检测中</string>
    <string translatable="false" name="bluetooth_close">关闭</string>
    <string translatable="false" name="bluetooth_close_info">蓝牙未启用</string>
    <string translatable="false" name="bluetooth_close_tips">蓝牙打开失败，请确认有蓝牙设备且可用</string>
    <string translatable="false" name="bluetooth_confirm_passkey_msg">要与以下设备配对：&amp;lt;br&amp;gt;&amp;lt;b&amp;gt;%1$s&amp;lt;/b&amp;gt;&amp;lt;br&amp;gt;&amp;lt;br&amp;gt;请确保其显示的配对密钥为：&amp;lt;br&amp;gt;&amp;lt;b&amp;gt;%2$s&amp;lt;/b&amp;gt;</string>
    <string translatable="false" name="bluetooth_connect">连接设备</string>
    <string translatable="false" name="bluetooth_connect_ok">已连接</string>
    <string translatable="false" name="bluetooth_connecting">连接中</string>
    <string translatable="false" name="bluetooth_dialog_connect_cancelbtn">取消配对</string>
    <string translatable="false" name="bluetooth_dialog_connect_positivebtn">直接连接</string>
    <string translatable="false" name="bluetooth_dialog_descovery">搜索蓝牙设备</string>
    <string translatable="false" name="bluetooth_dialog_descovery_cancel">已暂停</string>
    <string translatable="false" name="bluetooth_dialog_descovery_finish">搜索结束</string>
    <string translatable="false" name="bluetooth_dialog_descovery_not">未搜索</string>
    <string translatable="false" name="bluetooth_dialog_descoverying">搜索中...</string>
    <string translatable="false" name="bluetooth_dialog_descoverying_status">正在搜索中，无法关闭蓝牙</string>
    <string translatable="false" name="bluetooth_dialog_match_cancelbtn">取消</string>
    <string translatable="false" name="bluetooth_dialog_match_positivebtn">配对</string>
    <string translatable="false" name="bluetooth_dialog_matchsuccess">与%1$s配对，密钥为:%2$s</string>
    <string translatable="false" name="bluetooth_dialog_request_cancelbtn">取消</string>
    <string translatable="false" name="bluetooth_dialog_request_message2">您可能需要在蓝牙设备上输入同样的PIN</string>
    <string translatable="false" name="bluetooth_dialog_request_pin_info1">输入PIN与</string>
    <string translatable="false" name="bluetooth_dialog_request_pin_info2">配对。（通常为0000或1234）</string>
    <string translatable="false" name="bluetooth_dialog_request_positivebtn">确定</string>
    <string translatable="false" name="bluetooth_dialog_request_title">蓝牙配对请求</string>
    <string translatable="false" name="bluetooth_disconnect">断开连接</string>
    <string translatable="false" name="bluetooth_discovered_devices">已搜索到的设备</string>
    <string translatable="false" name="bluetooth_display_passkey_pin_msg">要与 &amp;lt;br&amp;gt;&amp;lt;b&amp;gt;%1$s&amp;lt;/b&amp;gt;&amp;lt;br&amp;gt;&amp;lt;br&amp;gt; 设备配对，请在该设备上键入：&amp;lt;br&amp;gt;&amp;lt;b&amp;gt;%2$s&amp;lt;/b&amp;gt;，然后按回车键。</string>
    <string translatable="false" name="bluetooth_enable_alphanumeric_pin">PIN 由字母或符号组成</string>
    <string translatable="false" name="bluetooth_enter_passkey_msg">要与 &amp;lt;br&amp;gt;&amp;lt;b&amp;gt;%1$s&amp;lt;/b&amp;gt;&amp;lt;br&amp;gt;&amp;lt;br&amp;gt; 设备配对，请键入该设备所需的配对密钥：</string>
    <string translatable="false" name="bluetooth_enter_passkey_other_device">您可能还需要在另一台设备上输入此密钥。</string>
    <string translatable="false" name="bluetooth_enter_pin_msg">要与 &amp;lt;br&amp;gt;&amp;lt;b&amp;gt;%1$s&amp;lt;/b&amp;gt;&amp;lt;br&amp;gt;&amp;lt;br&amp;gt; 设备配对，请键入该设备所需的 PIN：</string>
    <string translatable="false" name="bluetooth_enter_pin_other_device">您可能还需要在另一台设备上输入此 PIN。</string>
    <string translatable="false" name="bluetooth_error_cannot_open">请确认内置蓝牙驱动是否可用，或已插入外置蓝牙设备!</string>
    <string translatable="false" name="bluetooth_exception_cannot_refreshed">操作过于频繁设备无法刷新</string>
    <string translatable="false" name="bluetooth_exception_should_open_or_close">请重新开启或关闭蓝牙</string>
    <string translatable="false" name="bluetooth_incoming_pairing_msg">来自：&amp;lt;br&amp;gt;&amp;lt;b&amp;gt;%1$s&amp;lt;/b&amp;gt;&amp;lt;br&amp;gt;&amp;lt;br&amp;gt;要与此设备配对吗？</string>
    <string translatable="false" name="bluetooth_info_title">蓝牙信息:</string>
    <string translatable="false" name="bluetooth_isopen">已开启</string>
    <string translatable="false" name="bluetooth_item_bounding">绑定中</string>
    <string translatable="false" name="bluetooth_item_has_bound">已绑定</string>
    <string translatable="false" name="bluetooth_item_not_bound">未绑定</string>
    <string translatable="false" name="bluetooth_item_searching">检测中</string>
    <string translatable="false" name="bluetooth_matched_cancel">解除绑定</string>
    <string translatable="false" name="bluetooth_matched_cancel_failed">解除绑定失败</string>
    <string translatable="false" name="bluetooth_matched_cancel_key">解除与%1$s绑定</string>
    <string translatable="false" name="bluetooth_matched_key">您之前已与 %1$s配对</string>
    <string translatable="false" name="bluetooth_matched_nok">未配对</string>
    <string translatable="false" name="bluetooth_matched_ok">已配对</string>
    <string translatable="false" name="bluetooth_matching">配对中</string>
    <string translatable="false" name="bluetooth_matching_failed">蓝牙配对失败</string>
    <string translatable="false" name="bluetooth_matching_key">与 %1$s配对，密钥为：%2$s</string>
    <string translatable="false" name="bluetooth_not_connect">蓝牙未连接</string>
    <string translatable="false" name="bluetooth_notopen">未开启</string>
    <string translatable="false" name="bluetooth_open">打开</string>
    <string translatable="false" name="bluetooth_open_or_close_info">请重新开启或关闭蓝牙</string>
    <string translatable="false" name="bluetooth_open_status">蓝牙开关</string>
    <string translatable="false" name="bluetooth_operate_failed">操作过于频繁设备无法刷新</string>
    <string translatable="false" name="bluetooth_operating_hints">遥控器进入配对模式后(指示灯闪烁时),机顶盒自动完成配对连接</string>
    <string translatable="false" name="bluetooth_operating_hints_title1">按住菜单键 </string>
    <string translatable="false" name="bluetooth_operating_hints_title2"> 和返回键 </string>
    <string translatable="false" name="bluetooth_operating_hints_title3"> 靠近机顶盒</string>
    <string translatable="false" name="bluetooth_pairing_accept">配对</string>
    <string translatable="false" name="bluetooth_pairing_decline">取消</string>
    <string translatable="false" name="bluetooth_pairing_device_down_error_message">无法与“%1$s”进行通信。</string>
    <string translatable="false" name="bluetooth_pairing_devices">已配对的设备</string>
    <string translatable="false" name="bluetooth_pairing_error_message">无法与“%1$s”进行配对。</string>
    <string translatable="false" name="bluetooth_pairing_pin_error_message">PIN 或配对密钥不正确，无法与“%1$s”配对。</string>
    <string translatable="false" name="bluetooth_pairing_rejected_error_message">%1$s 已拒绝配对。</string>
    <string translatable="false" name="bluetooth_pairing_request">蓝牙配对请求</string>
    <string translatable="false" name="bluetooth_pin_values_hint">通常为 0000 或 1234</string>
    <string translatable="false" name="bluetooth_shared_status">(附近蓝牙设备对此设备可见)</string>
    <string translatable="false" name="bluetooth_shared_status_disable">(附件蓝牙设备对此设备不可见)</string>
    <string translatable="false" name="bluetooth_toast_disable_shared">蓝牙未打开，未能开启分享</string>
    <string translatable="false" name="bluetooth_toast_discovery_before_enable">请确保蓝牙已开启，然后执行搜索</string>
    <string translatable="false" name="cancel">取消</string>
    <string translatable="false" name="delay_time_edit_desc">按确认键使用输入法</string>
    <string translatable="false" name="device_message">设备信息</string>
    <string translatable="false" name="pwd_input">请输入密码</string>
    <string translatable="false" name="service_frame_version_detaile">版本信息</string>
    <string translatable="false" name="service_type">认证信息</string>
    <string translatable="false" name="setting_anent">关 于</string>
    <string translatable="false" name="setting_currency">通 用</string>
    <string translatable="false" name="setting_figure">图像和声音</string>
    <string translatable="false" name="setting_net">网 络</string>
    <string translatable="false" name="setting_net_diagnose">设备诊断</string>
    <string translatable="false" name="setting_net_diagnose_guide">业务诊断</string>
    <string translatable="false" name="setting_net_diagnose_terminal">终端诊断</string>
    <string translatable="false" name="setting_safetry">安 全</string>
    <string translatable="false" name="setting_upgrade">升 级</string>
    <string translatable="false" name="wifi_connect">连接</string>
    <string translatable="false" name="wifi_secure">安全</string>
    <string translatable="false" name="wifi_strength">强度</string>
    <string name="scaling_tips1">按确认键切换焦点</string>
    <string name="scaling_tips2_left">按左右方向键调整左边距</string>
    <string name="scaling_tips3">按返回键保存</string>
</resources>