<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="@dimen/_800dp" android:layout_height="@dimen/_500dp"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/_36dp" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="@dimen/_36sp" android:textColor="#fffdfdfd" android:ellipsize="marquee" android:id="@id/tv_wifi_name" android:layout_width="wrap_content" android:layout_height="@dimen/_50dp" android:layout_marginLeft="@dimen/_20dp" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" />
        <View android:background="@drawable/wifi_connect_line" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="@dimen/_20dp" android:layout_marginTop="@dimen/_5dp" android:layout_marginRight="@dimen/_20dp" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_20dp" android:layout_marginTop="@dimen/_30dp">
            <TextView android:textSize="@dimen/_30sp" android:layout_width="@dimen/_150dp" android:layout_height="@dimen/_40dp" android:text="@string/wifi_secure" android:singleLine="true" />
            <TextView android:textSize="@dimen/_30sp" android:id="@id/tv_wifi_secure" android:layout_width="wrap_content" android:layout_height="@dimen/_40dp" android:layout_marginLeft="@dimen/_20dp" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_20dp" android:layout_marginTop="@dimen/_20dp">
            <TextView android:textSize="@dimen/_30sp" android:layout_width="@dimen/_150dp" android:layout_height="@dimen/_40dp" android:text="@string/wifi_strength" android:singleLine="true" />
            <TextView android:textSize="@dimen/_30sp" android:id="@id/tv_wifi_strength" android:layout_width="wrap_content" android:layout_height="@dimen/_40dp" android:layout_marginLeft="@dimen/_20dp" />
        </LinearLayout>

        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_50dp">
            <Button android:textSize="@dimen/_36sp" android:id="@id/dialog_wifi_connect" android:layout_height="wrap_content" android:text="@string/wifi_connect" style="@style/button_page_style2" />
            <Button android:textSize="@dimen/_36sp" android:id="@id/dialog_wifi_cancel" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_90dp" android:text="@string/cancel" style="@style/button_page_style2" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>