<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="554.0dip"
    android:layout_height="354.0dip"

    android:gravity="center"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg2"
    android:orientation="vertical"
    android:paddingBottom="50.0dip"
    android:paddingLeft="50.0dip"
    android:paddingRight="50.0dip"
    android:paddingTop="40.0dip">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/pwd_input"
        android:textColor="@color/white"
        android:textSize="@dimen/_40sp" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/horizontal_line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:orientation="vertical">

        <TextView
            android:layout_width="@dimen/_300dp"
            android:layout_height="@dimen/_30dp"
            android:layout_marginLeft="@dimen/_5dp"
            android:focusable="false"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/delay_time_edit_desc"
            android:textColor="@color/gray"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/input_password_protection_root"
            android:nextFocusDown="@+id/confirm_root_password"
            android:layout_width="@dimen/_300dp"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:background="@drawable/edittext_selector_on"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5dp"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/confirm_root_password"
            android:nextFocusUp="@+id/input_password_protection_root"
            android:background="@drawable/selector_wifi_item"
            style="@style/button"
            android:text="确认" />

        <Button
            android:id="@+id/cancel_root_password"
            style="@style/button"
            android:background="@drawable/selector_wifi_item"
            android:layout_marginLeft="30.0dip"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>