<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/settings_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/_200dp"
        android:layout_marginTop="@dimen/_31dp"
        android:gravity="center">

        <TextView
            style="@style/SettingPartTitle"
            android:layout_gravity="center"
            android:layout_marginTop="0.0dip"
            android:text="@string/setting_net_diagnose" />
    </LinearLayout>
    <!--    设备信息-->
    <ScrollView
        android:id="@id/sv_root_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@id/setting_bluetooth_home"
            android:layout_width="@dimen/_947dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/diagnose_terminal"
                style="@style/SettingSubLayout"
                android:layout_below="@id/rl_bluetooth_switch"
                android:layout_marginTop="0.0dip"
                android:background="@drawable/selector_wifi_item">

                <TextView
                    style="@style/SettingSubTextView"
                    android:duplicateParentState="true"
                    android:text="@string/setting_net_diagnose_terminal"
                    android:textColor="@drawable/item_text_color" />

                <ImageView
                    style="@style/SettingRightImageView"
                    android:background="@drawable/ic_arrow_right_selector"
                    android:duplicateParentState="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/diagnose_business"
                style="@style/SettingSubLayout"
                android:layout_below="@id/rl_bluetooth_switch"
                android:layout_marginTop="0.0dip"
                android:background="@drawable/selector_wifi_item">

                <TextView
                    style="@style/SettingSubTextView"
                    android:duplicateParentState="true"
                    android:text="@string/setting_net_diagnose_guide"
                    android:textColor="@drawable/item_text_color" />

                <ImageView
                    style="@style/SettingRightImageView"
                    android:background="@drawable/ic_arrow_right_selector"
                    android:duplicateParentState="true" />
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>